# hello_dect

./: .gitignore  CLAUDE.md  CMakeLists.txt  Kconfig  README.md  build.ps1  build_ext_flash.ps1  nrf9151dk_nrf9151_ns.overlay  prj.conf  program.ps1  project_overview.md  setup_env.ps1
src/: anchor.c  anchor.h  config.c  config.h  data.c  data.h  fragment.c  fragment.h  gateway.c  gateway.h  large_data.c  large_data.h  log_color.h  main.c  main_sub.c  main_sub.h  mesh.c  mesh.h  mesh_tx.c  product_info.c  product_info.h  protocol.h  psram.c  psram.h  psram_queue.c  psram_queue.h  queue.c  queue.h  radio.c  radio.h  sensor.c  sensor.h  serial.c  serial.h  slm_at_common.h  slm_at_main.c  slm_at_main.h  slm_at_sub.c  slm_at_sub.h  slm_at_uart.c  (+9 more)
src/mesh_layers/: mesh_pairing.c  mesh_pairing.h  mesh_routing.c  mesh_routing.h  mesh_session.c  mesh_session.h
src/testing/: buttons.c  buttons.h  factory_reset.c  factory_reset.h  led.c  led.h  nvs_flash.c  nvs_flash.h  overlay-nvs.conf  overlay-nvs.overlay
tools/: at_console.py  gateway_gui.py  sensor_gui.py  sensor_sim.py  sensor_structure.c
